# c-cmake-template

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  main.c
src/shelf/: CMakeLists.txt  shelf.c  shelf.h
tests/: CMakeLists.txt  test_shelf.c
